src/test/ui/issues/issue-47184.stderr
error[E0714]: temporary value dropped while borrowed
  --> $DIR/issue-47184.rs:14:44
   |
LL |     let _vec: Vec<&'static String> = vec![&String::new()];
   |                                            ^^^^^^^^^^^^^ - temporary value is freed at the end of this statement
   |                                            |
   |                                            creates a temporary which is freed while still in use
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0714`.
